--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "electron": "11.0.3"
+    "electron": "11.0.3",
+    "electron-reload": "^1.5.0"
   }
 }
