--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
   "devDependencies": {
     "electron": "11.0.3",
     "electron-reload": "^1.5.0"
+  },
+  "dependencies": {
+    "axios": "^0.21.0"
   }
 }
